# aws-cost-tool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/app/: app_state.py  aws_source.py  file_data_source.py  interfaces.py  main.py  mock_data_source.py  sql_tab.py  ui_components.py
src/aws_cost_tool/: __init__.py  by_tags.py  ce_types.py  client.py  cost_explorer.py  cost_reports.py  service_base.py  service_loader.py
src/aws_cost_tool/services/: ec2.py  ec2_other.py  efs.py  rds.py  s3.py
tests/: conftest.py
tests/app/: app_state_test.py  main_test.py  sql_tab_test.py
tests/aws_cost_tool/: client_test.py  cost_explorer_test.py  cost_reports_test.py  service_base_test.py  service_loader_test.py
tests/aws_cost_tool/services/: ec2_other_test.py  ec2_test.py  efs_test.py  rds_test.py  s3_test.py
