[project]
name = "aws-cost-tool"
version = "0.1.0"
description = "Some sample code to dissect AWS Cost Explorer output using boto3"
readme = "README.md"
authors = [{ name = "Joe Chan", email = "firstianus@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["boto3>=1.42.9", "pandas>=2.3.3"]

[project.scripts]
aws-cost-tool = "app.main:start_app"

[project.optional-dependencies]
app = [
  "cachetools>=6.2.4",
  "duckdb>=1.4.3",
  "plotly>=6.5.0",
  "pyyaml>=6.0.3",
  "streamlit>=1.52.2",
  "types-pyyaml>=6.0.12.20250915",
  "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "mypy>=1.14.0",
  "pandas-stubs>=3.0.0.260204",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.0",
  "types-cachetools>=5.5.0",
  "types-python-dateutil>=2.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
python_version = "3.14"
